--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- this is for mobile scaling
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     -->
-    @import
+   <link href="https://fonts.googleapis.com/css2?family=Merienda+One&display=swap" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
 </head>
 
@@ -25,17 +25,20 @@
         
         <hr />
        
-        <class = "roles">
+        <div class="row">
             <div class="col">
-                 <h2> i work for simply devine graphics <h2>
-            <p> tee shirts <p>
-             <div class="col"
-                 <h2> work number is .... <h2>
-                       <p> <p>
-            <div class="col" 
-                  <h2> in nc <h2>
-                     <p> morgenton <p> 
+                 <h2> i work for simply devine graphics </h2>
+            <p> tee shirts </p>
+                 </div>
+             <div class="col">
+                 <h2> work number is .... </h2>
+                       <p> </p>
+                </div>
+            <div class="col"> 
+                  <h2> in nc </h2>
+                     <p> morgenton </p> 
                      </div>
+             </div>
         <div class="footer">
             <!-- footer content here -->
         </div>
