--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         <div class="row">
             <div class="col">
                  <h2> i work for simply devine graphics </h2>
-            <p> tee shirts </p>
-                 </div>
-             <div class="col">
-                 <h2> work number is .... </h2>
-                       <p> </p>
-                </div>
-            <div class="col"> 
-                  <h2> in nc </h2>
-                     <p> morgenton </p> 
-                     </div>
-             </div>
+                    <p> tee shirts </p>
+                                </div>
+         <div class="col">
+            <h2> work number is .... </h2>
+                <p>bisness </p>
+                    </div>
+          <div class="col"> 
+              <h2> in nc </h2>
+                   <p> morgenton </p> 
+                      </div>
+                         </div>
         <div class="footer">
             <!-- footer content here -->
         </div>
