--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>i like anime.</h3>
             </div>
             <div class="col">
-                <p>This is a column</p>
+              <img crc="  
             </div>
         </div>
         
