--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>i like anime.</h3>
             </div>
             <div class="col">
-              <img src="woman-in-black-dress-holding-animal-skull-3318614.jpg" class"profile-img" />
+              <img src="woman-in-black-dress-holding-animal-skull-3318614.jpg" class="profile-img" />
   
             </div>
         </div>
