--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- main content here -->
     <div class="banner">
-        <div class="banner-text">hello.</div>
+        <div class="banner-text">i like anime and video games im a weeb im 12 and i have a job.</div>
     </div>
     <div class="content">
         <div class="row">
